--- a/index.html
+++ b/index.html
@@ -27,16 +27,14 @@
     </header>
     <main>
         <!-- ABOUT ME -->
-        <section>
+        <section class="intro">
             <h1>Jessica Hek</h1>
-            <p class="intro">
-                Full stack developer | She Codes mentor | Hobbyist game developer
+            <p>
+                Full stack developer | Hobby game developer
             </p>
-            <div>
-                <a class="button" href="projects.html">View projects</a>
-                <a class="button" href="about.html">About me</a>
-                <a class="button" href="contact.html">Contact me</a>
-            </div>
+            <a class="button" href="projects.html">View all projects</a>
+            <a class="button" href="about.html">About me</a>
+            <a class="button" href="contact.html">Contact me</a>
         </section>
         <!-- PROJECTS -->
         <section class="projects">
