--- a/projects/crowdfunding.html
+++ b/projects/crowdfunding.html
@@ -26,8 +26,8 @@
     </header>
     <main>
         <h1>Healium</h1>
-        <section id="projects">
-            <div class="video">
+        <section class="projects">
+            <div>
                 <iframe src="https://youtube.com/embed/c-oBmtCUVyU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen alt="Youtube video of Flappy Bird game play with walk-through of code improvements"></iframe>
             </div>
             <div>
@@ -45,19 +45,21 @@
                     <li>pledge an amount to an existing project</li>
                 </ul>
             </div>
-            <div class="intro">
+            <div>
                 <h2>Screenshots</h2>
-                <a href="screenshots/Healium-home-page.png" target="_blank">
-                    <img src="screenshots/Healium-home-page.png" alt="Screenshot of Healium home page">
-                </a>
-                <a href="screenshots/Healium-projects.png" target="_blank">
-                    <img src="screenshots/Healium-projects.png" alt="Screenshot of Healium project cards">
-                </a>
-                <a href="screenshots/Healium-pledge.png" target="_blank">
-                    <img src="screenshots/Healium-pledge.png" alt="Screenshot of Healium project page with pledge form">
-                </a>
+                <div class="screenshots">
+                    <a href="../screenshots/Healium-home-page.png" target="_blank">
+                        <img src="../screenshots/Healium-home-page.png" alt="Screenshot of Healium home page">
+                    </a>
+                    <a href="../screenshots/Healium-projects.png" target="_blank">
+                        <img src="../screenshots/Healium-projects.png" alt="Screenshot of Healium project cards">
+                    </a>
+                    <a href="../screenshots/Healium-pledge.png" target="_blank">
+                        <img src="../screenshots/Healium-pledge.png" alt="Screenshot of Healium project page with pledge form">
+                    </a>
+                </div>
             </div>
-            <div class="intro">
+            <div>
                 <h2>Links</h2>   
                 <a class="button" href="https://keen-gecko-1cbdfe.netlify.app/">Healium website</a>
                 <a class="button" href="https://github.com/what-the-hek/crowdfunding">GitHub (front-end)</a>
