--- a/projects/flappy-pig.html
+++ b/projects/flappy-pig.html
@@ -26,8 +26,8 @@
     </header>
     <main>
         <h1>Flappy pig</h1>
-        <section id="projects">
-        <div class="video">
+        <section class="projects">
+        <div>
             <iframe src="https://www.youtube.com/embed/9Mwzu6QFaTg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen alt="Youtube video of Flappy Bird game play with walk-through of code improvements"></iframe>
         </div>
         <div>
