--- a/projects/koorta.html
+++ b/projects/koorta.html
@@ -25,9 +25,9 @@
         </nav>
     </header>
     <main>
-        <section>
+        <!-- <section> -->
         <h1>Koorta</h1>
-        </section>
+        <!-- </section> -->
         <section class="projects">
             <div>
                 <iframe src="https://youtube.com/embed/KakfCV3yl28" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen alt="Youtube video of Flappy Bird game play with walk-through of code improvements"></iframe>
@@ -47,24 +47,26 @@
             </div>
             <div>
                 <h2>Screenshots</h2>
-                <a href="screenshots/Koorta.png" target="_blank">
-                    <img src="screenshots/Koorta.png" alt="Screenshot of Koorta playthrough">
-                </a>
-                <a href="screenshots/Koorta1.png" target="_blank">
-                    <img src="screenshots/Koorta1.png" alt="Screenshot of Koorta playthrough">
-                </a>
-                <a href="screenshots/Koorta2.png" target="_blank">
-                    <img src="screenshots/Koorta2.png" alt="Screenshot of Koorta playthrough">
-                </a>
-                <a href="screenshots/Koorta3.png" target="_blank">
-                    <img src="screenshots/Koorta3.png" alt="Screenshot of Koorta playthrough">
-                </a>
-                <a href="screenshots/Koorta4.png" target="_blank">
-                    <img src="screenshots/Koorta4.png" alt="Screenshot of Koorta playthrough">
-                </a>
-                <a href="screenshots/Koorta5.png" target="_blank">
-                    <img src="screenshots/Koorta5.png" alt="Screenshot of Koorta playthrough">
-                </a>
+                <div class="screenshots">
+                    <a href="../screenshots/Koorta.png" target="_blank">
+                        <img src="../screenshots/Koorta.png" alt="Screenshot of Koorta playthrough">
+                    </a>
+                    <a href="../screenshots/Koorta1.png" target="_blank">
+                        <img src="../screenshots/Koorta1.png" alt="Screenshot of Koorta playthrough">
+                    </a>
+                    <a href="../screenshots/Koorta2.png" target="_blank">
+                        <img src="../screenshots/Koorta2.png" alt="Screenshot of Koorta playthrough">
+                    </a>
+                    <a href="../screenshots/Koorta3.png" target="_blank">
+                        <img src="../screenshots/Koorta3.png" alt="Screenshot of Koorta playthrough">
+                    </a>
+                    <a href="../screenshots/Koorta4.png" target="_blank">
+                        <img src="../screenshots/Koorta4.png" alt="Screenshot of Koorta playthrough">
+                    </a>
+                    <a href="../screenshots/Koorta5.png" target="_blank">
+                        <img src="../screenshots/Koorta5.png" alt="Screenshot of Koorta playthrough">
+                    </a>
+                </div>
             </div>
             <div>
                 <h2>Links</h2>
