--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,7 @@
     <main>
         <h1>Contact me</h1>
         <form action="https://formspree.io/f/mlevlabp" method="post">
+            <div>
                 <label for="name">Your name:</label>
                 <input type="text" id="name" name="Name">
                 <label for="mail">Email:</label>
@@ -35,7 +36,8 @@
                 <input type="text" id="mobile" name="Mobile">
                 <label for="message">Message:</label>
                 <textarea id="message" name="Message"></textarea>
-                <button type="submit">Submit</button>
+            </div>
+            <button type="submit">Submit</button>
         </form>
     </main>
     <footer>
