--- a/projects.html
+++ b/projects.html
@@ -33,45 +33,38 @@
             <a class="card" href="projects/koorta.html">
                 <img src="screenshots/Koorta1.png" alt="Screenshot of Koorta dancing spider game playthrough">
                 <h3>Koorta</h3>
-                <p>A 3D game where you make the spider dance, inspired by the local peacock spider in Perth, Western Australia.</p>
-                <i>Unity</i>
-                <i>C#</i>
+                <p>Dancing spider game inspired by the local peacock spider from Perth, Western Australia.</p>
+                <p>2023 - Game</p>
             </a>
             <a class="card" href="projects/crowdfunding.html">
                 <img src="screenshots/Healium-home-page.png" alt="Screenshot of Healium crowdfunding home page">
                 <h3>Healium</h3>
                 <p>A crowdfunding website aimed at helping people financially recover from family and domestic abuse.</p>
-                <i>React</i>
-                <i>JavaScript</i>
-                <i>Django Rest Framework</i>
+                <p>2023 - Website</p>
             </a>
             <a class="card" href="projects/flappy-pig.html">
                 <img src="images/flappypig1.PNG" alt="Screenshot of flappy pig game">
                 <h3>Flappy pig</h3>
-                <p>A 2D farm-themed game based on the 2013 game, Flappy Bird</p>
-                <i>Lua</i>
+                <p>Farm-themed version of the 2013 game, Flappy Bird.</p>
+                <p>2022 - Game</p>
             </a>
             <a class="card" href="projects/news.html">
                 <img src="screenshots/django-news.png" alt="Screenshot of front page for news site">
                 <h3>She Codes News</h3>
                 <p>A website where people can create an account and post news stories.</p>
-                <i>Python</i>
-                <i>Django</i>
-                <i>HTML</i>
-                <i>CSS</i>
+                <p>2022 - Website</p>
             </a>
             <a class="card" href="projects/weather.html">
                 <img src="images/weather-app.jpg" alt="Hand holding a phone with a weather application open">
                 <h3>Weather app</h3>
                 <p>An app that processes csv files containing data about the weather, and converts them into meaningful text-based summaries.</p>
-                <i>Python</i>
+                <p>2022 - API</p>
             </a>
             <a class="card" href="projects/portfolio.html">
                 <img src="images/portfolio.jpg" alt="Screenshot of portfolio home page">
                 <h3>My portfolio</h3>
                 <p>This online portfolio, created during the She Codes Plus program</p>
-                <i>HTML</i>
-                <i>CSS</i>
+                <p>2022 - Website</p>
             </a>
         </section>
     </main>
