--- a/projects/news.html
+++ b/projects/news.html
@@ -26,8 +26,8 @@
     </header>
     <main>
         <h1>She Codes News</h1>
-        <section id="projects">
-            <div class="video">
+        <section class="projects">
+            <div>
                 <iframe src="https://www.youtube.com/embed/L_kt5VzdSQA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen alt="Youtube video of Flappy Bird game play with walk-through of code improvements"></iframe>
             </div>
             <div>
@@ -42,7 +42,7 @@
                     <li>delete news stories.</li>
                 </ul>
             </div>
-            <div class="intro">
+            <div>
                 <h2>Links</h2>   
                 <a class="button" href="https://github.com/what-the-hek/she-codes-django-news-project-what-the-hek">GitHub</a>
                 <a class="button" href="screenshots/Jess-Hek-Django-Submission.docx" download target="_blank">Download screenshots</a> 
