--- a/projects/portfolio.html
+++ b/projects/portfolio.html
@@ -26,7 +26,7 @@
     </header>
     <main>
         <h1>My portfolio</h1>
-        <section id="projects">
+        <section class="projects">
             <div>
                 <h2>Project brief</h2>
                 <p>This is the first project I completed as part of the She Codes Plus program in 2022.</p>
@@ -40,7 +40,7 @@
                     <img src="screenshots/20221016_090013.jpg" alt="Draft wireframe for this portfolio">
                 </a>
             </div> -->
-            <div class="intro">
+            <div>
                 <h2>Links</h2>   
                 <a class="button" href="https://github.com/what-the-hek/what-the-hek.github.io">GitHub</a>
             </div>  
