--- a/projects/weather.html
+++ b/projects/weather.html
@@ -26,26 +26,28 @@
     </header>
     <main>
         <h1>Weather app</h1>
-        <section id="projects">
+        <section class="projects">
             <div>
                 <h2>Project brief</h2>
                 <p>This project was my first introduction to python as part of the She Codes Plus program.</p>
                 <p>My task was to process different csv files containing data about the weather, and convert them into meaningful text-based summaries so they can be read by people.</p>
                 <p>I received positive feedback about my python code for this project from the lead python mentor.</p>
             </div>
-            <div class="intro">
+            <div>
                 <h2>Screenshots</h2>
-                <a href="../screenshots/python-feedback.PNG" target="_blank">
-                    <img src="/screenshots/python-feedback.PNG" alt="Screenshot of positive feedback from She Codes Plus lead mentor for python">
-                </a>
-                <a href="../screenshots/python-test-results.png" target="_blank">
-                    <img src="/screenshots/python-test-results.png" alt="Screenshot of all code passing the tests">
-                </a>
-                <a href="../screenshots/python-weather.PNG" target="_blank">
-                    <img src="/screenshots/python-weather.PNG" alt="Screenshot of some python code from the weather app">
-                </a>
+                <div class="screenshots">
+                    <a href="../screenshots/python-feedback.PNG" target="_blank">
+                        <img src="../screenshots/python-feedback.PNG" alt="Screenshot of positive feedback from She Codes Plus lead mentor for python">
+                    </a>
+                    <a href="../screenshots/python-test-results.png" target="_blank">
+                        <img src="../screenshots/python-test-results.png" alt="Screenshot of all code passing the tests">
+                    </a>
+                    <a href="../screenshots/python-weather.PNG" target="_blank">
+                        <img src="../screenshots/python-weather.PNG" alt="Screenshot of some python code from the weather app">
+                    </a>
+                </div>
             </div>
-            <div class="intro">
+            <div>
                 <h2>Links</h2>   
                 <a class="button" href="https://github.com/what-the-hek/she-codes-python-weather-project-what-the-hek">GitHub</a>
            </div>  
