--- a/about.html
+++ b/about.html
@@ -54,6 +54,8 @@
             </div>
         </section>
     </main> 
-    <footer></footer>
+    <footer>
+        <p>2024</p>
+    </footer>
 </body>
 </html>
