--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
             </a>
         </section>
     </main> 
-    <footer></footer>
+    <footer>
+        <p>2024</p>
+    </footer>
 </body>
 </html>
