more media queries, structuring home page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a href="contact.html">Contact me</a>
         </nav>
     </header>
-    <main>
+    <main class="home">
         <!-- ABOUT ME -->
         <section class="intro">
             <h1>Jessica Hek</h1>
