minor style change to mobile header and about info

--- a/about.html
+++ b/about.html
@@ -36,6 +36,19 @@
                 I'm a full stack developer based in Perth, Western Australia. <br><br>
                 I'm currently employed by BHP where I help create bespoke websites and apps for internal customers.
                 </p>
+                <p>My tech stack includes:
+                    <ul>
+                        <li>Python</li>
+                        <li>Django</li>
+                        <li>Django Rest Framework</li>
+                        <li>JavaScript</li>
+                        <li>Typescript</li>
+                        <li>React</li>
+                        <li>Angular</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                    </ul>
+                </p>
                 <h2>My journey</h2>
                 <p>
                 I worked in government for almost 16 years before becoming a developer. <br><br>
