--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section class="intro">
             <h1>Jessica Hek</h1>
             <p>
-                Full stack developer | Hobby game developer
+                Full stack developer, hobby game developer and She Codes mentor
             </p>
             <a class="button" href="projects.html">View all projects</a>
             <a class="button" href="about.html">About me</a>
