more style changes for desktop

--- a/about.html
+++ b/about.html
@@ -20,8 +20,6 @@
             <a href="index.html">Home</a>
             <a href="projects.html">Projects</a>
             <a href="about.html">About me</a>
-            <a href="https://www.linkedin.com/in/jessicahek/" target="_blank">LinkedIn</a>
-            <a href="https://github.com/what-the-hek" target="_blank">GitHub</a>
             <a href="contact.html">Contact me</a>
         </nav>
     </header>
@@ -30,7 +28,7 @@
         <section class="projects">
             <h1>About me</h1>
             <img id="profile-img" src="images/bio-pic3.png" alt="Profile picture of Jessica Hek">
-            <div>
+            <div class="'project_details">
                 <h2>Hello, I'm Jess</h2>
                 <p>
                 I'm a full stack developer based in Perth, Western Australia. <br><br>
@@ -68,6 +66,10 @@
         </section>
     </main> 
     <footer>
+        <nav>
+            <a href="https://www.linkedin.com/in/jessicahek/" target="_blank">LinkedIn</a>
+            <a href="https://github.com/what-the-hek" target="_blank">GitHub</a>
+        </nav>
         <p>2024</p>
     </footer>
 </body>
