--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
             <a href="index.html">Home</a>
             <a href="projects.html">Projects</a>
             <a href="about.html">About me</a>
-            <a href="https://www.linkedin.com/in/jessicahek/" target="_blank">LinkedIn</a>
-            <a href="https://github.com/what-the-hek" target="_blank">GitHub</a>
             <a href="contact.html">Contact me</a>
         </nav>
     </header>
@@ -49,9 +47,18 @@
                 <h3>Flappy pig</h3>
                 <p>Farm-themed version of the 2013 game, Flappy Bird.</p>
             </a>
+            <a class="card" href="projects/crowdfunding.html">
+                <img src="screenshots/Healium-home-page.png" alt="Screenshot of Healium crowdfunding home page">
+                <h3>Healium</h3>
+                <p>A crowdfunding website aimed at helping people financially recover from family and domestic abuse.</p>
+            </a>
         </section>
     </main> 
     <footer>
+        <nav>
+            <a href="https://www.linkedin.com/in/jessicahek/" target="_blank">LinkedIn</a>
+            <a href="https://github.com/what-the-hek" target="_blank">GitHub</a>
+        </nav>
         <p>2024</p>
     </footer>
 </body>
