--- a/projects/koorta.html
+++ b/projects/koorta.html
@@ -19,8 +19,6 @@
             <a href="../index.html">Home</a>
             <a href="../projects.html">Projects</a>
             <a href="../about.html">About me</a>
-            <a href="https://www.linkedin.com/in/jessicahek/" target="_blank">LinkedIn</a>
-            <a href="https://github.com/what-the-hek" target="_blank">GitHub</a>
             <a href="../contact.html">Contact me</a>
         </nav>
     </header>
@@ -32,7 +30,7 @@
             <div>
                 <iframe src="https://youtube.com/embed/KakfCV3yl28" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen alt="Youtube video of Flappy Bird game play with walk-through of code improvements"></iframe>
             </div>
-            <div>
+            <div class="project_details">
                 <h2>Project brief</h2>
                 <p>As a team of five, create a game using the theme "connection". this game was created during a 2 day game jam run by <a class=".p-link" href="https://levelherup.com.au/">Level Her Up</a></p>
                 <p>I was responsible for programming the game using Unity and C#.</p>
@@ -76,6 +74,10 @@
         <section>
     </main>
     <footer>
+        <nav>
+            <a href="https://www.linkedin.com/in/jessicahek/" target="_blank">LinkedIn</a>
+            <a href="https://github.com/what-the-hek" target="_blank">GitHub</a>
+        </nav>
         <p>2024</p>
     </footer>
 </body>
