--- a/projects/portfolio.html
+++ b/projects/portfolio.html
@@ -19,15 +19,13 @@
             <a href="../index.html">Home</a>
             <a href="../projects.html">Projects</a>
             <a href="../about.html">About me</a>
-            <a href="https://www.linkedin.com/in/jessicahek/" target="_blank">LinkedIn</a>
-            <a href="https://github.com/what-the-hek" target="_blank">GitHub</a>
             <a href="../contact.html">Contact me</a>
         </nav>
     </header>
     <main>
         <h1>My portfolio</h1>
         <section class="projects">
-            <div>
+            <div class="project_details">
                 <h2>Project brief</h2>
                 <p>This is the first project I completed as part of the She Codes Plus program in 2022.</p>
                 <p>I started by drafting a wireframe to get the structure of my portfolio. I used HTMl and 
@@ -47,6 +45,10 @@
         <section>
     </main>
     <footer>
+        <nav>
+            <a href="https://www.linkedin.com/in/jessicahek/" target="_blank">LinkedIn</a>
+            <a href="https://github.com/what-the-hek" target="_blank">GitHub</a>
+        </nav>
         <p>2024</p>
     </footer>
 </body>
