--- a/projects/weather.html
+++ b/projects/weather.html
@@ -19,15 +19,13 @@
             <a href="../index.html">Home</a>
             <a href="../projects.html">Projects</a>
             <a href="../about.html">About me</a>
-            <a href="https://www.linkedin.com/in/jessicahek/" target="_blank">LinkedIn</a>
-            <a href="https://github.com/what-the-hek" target="_blank">GitHub</a>
             <a href="../contact.html">Contact me</a>
         </nav>
     </header>
     <main>
         <h1>Weather app</h1>
         <section class="projects">
-            <div>
+            <div class="project_details">
                 <h2>Project brief</h2>
                 <p>This project was my first introduction to python as part of the She Codes Plus program.</p>
                 <p>My task was to process different csv files containing data about the weather, and convert them into meaningful text-based summaries so they can be read by people.</p>
@@ -54,6 +52,10 @@
         <section>
     </main>
     <footer>
+        <nav>
+            <a href="https://www.linkedin.com/in/jessicahek/" target="_blank">LinkedIn</a>
+            <a href="https://github.com/what-the-hek" target="_blank">GitHub</a>
+        </nav>
         <p>2024</p>
     </footer>
 </body>
