--- a/projects.html
+++ b/projects.html
@@ -20,8 +20,6 @@
             <a href="index.html">Home</a>
             <a href="projects.html">Projects</a>
             <a href="about.html">About me</a>
-            <a href="https://www.linkedin.com/in/jessicahek/" target="_blank">LinkedIn</a>
-            <a href="https://github.com/what-the-hek" target="_blank">GitHub</a>
             <a href="contact.html">Contact me</a>
         </nav>
     </header>
@@ -69,6 +67,10 @@
         </section>
     </main>
     <footer>
+        <nav>
+            <a href="https://www.linkedin.com/in/jessicahek/" target="_blank">LinkedIn</a>
+            <a href="https://github.com/what-the-hek" target="_blank">GitHub</a>
+        </nav>
         <p>2024</p>
     </footer>
 </body>
