--- a/projects/crowdfunding.html
+++ b/projects/crowdfunding.html
@@ -19,8 +19,6 @@
             <a href="../index.html">Home</a>
             <a href="../projects.html">Projects</a>
             <a href="../about.html">About me</a>
-            <a href="https://www.linkedin.com/in/jessicahek/" target="_blank">LinkedIn</a>
-            <a href="https://github.com/what-the-hek" target="_blank">GitHub</a>
             <a href="../contact.html">Contact me</a>
         </nav>
     </header>
@@ -30,7 +28,7 @@
             <div>
                 <iframe src="https://youtube.com/embed/c-oBmtCUVyU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen alt="Youtube video of Flappy Bird game play with walk-through of code improvements"></iframe>
             </div>
-            <div>
+            <div class="project_details">
                 <h2>Project brief</h2>
                 <p>This crowdfunding website was created in early 2023 as part of the She Codes Plus program in Perth Western Australia.
                 </p>
@@ -68,6 +66,10 @@
         <section>
     </main>
     <footer>
+        <nav>
+            <a href="https://www.linkedin.com/in/jessicahek/" target="_blank">LinkedIn</a>
+            <a href="https://github.com/what-the-hek" target="_blank">GitHub</a>
+        </nav>
         <p>2024</p>
     </footer>
 </body>
