added sound reflections to portfolio

--- a/flappy-pig.html
+++ b/flappy-pig.html
@@ -40,6 +40,7 @@
                 <li>implementing a pause feature that triggers a sound effect when selected.</li>
             </ul>
             <p>I created all the assets for this game in Aseprite, and the pause sound effect in Bfxr.</p>
+            <p>You can play Flappy Pig for free on <a class=".p-link" href="https://whatthehek.itch.io/flappy-pig" target="_blank">itch.io</a></p>
         </div>
         <section>
     </main>
