--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
         <section id="projects-section">
             <h2>Recent projects</h2>
             <div>
+                <a class="card" href="sound-reflections.html">
+                    <img src="screenshots/SR1.png" alt="Screenshot of the start page for Sound Reflections">
+                    <p class="card-title">Sound Reflections</p>
+                    <p>A 2D game where you help 'Violet' complete her daily check-list of tasks, sorting them into 4 different life domains.</p>
+                    <i>Unity</i>
+                    <i>C#</i>
+                </a>
                 <a class="card" href="koorta.html">
                     <img src="screenshots/Koorta1.png" alt="Screenshot of Koorta dancing spider game playthrough">
                     <p class="card-title">Koorta</p>
