--- a/koorta.html
+++ b/koorta.html
@@ -30,7 +30,7 @@
             </div>
             <div>
                 <h2>Project brief</h2>
-                <p>As a team of five, create a game using the theme "connection". this game was created during a 2 day game jam run by <a class=".p-link" href="https://levelherup.com.au/">Level Her Up</a></p>
+                <p>As a team of five, create a game using the theme "connection". This game was created during a 2 day game jam run by <a class=".p-link" href="https://levelherup.com.au/">Level Her Up</a></p>
                 <p>I was responsible for programming the game using Unity and C#.</p>
                 <p>Some of the features for the game include:</p>
                 <ul>
@@ -39,7 +39,7 @@
                     <li>hidden counter to track the number of matching user actions to directions</li>
                     <li>messages to indicate a win or loss based on threshold (7 out of 10 dance correct moves)</li>
                 </ul>
-                <p>Koorta is now available to play on itch.io!</p>
+                <p>Koorta is now available to play on <a class=".p-link" href="https://whatthehek.itch.io/koorta" target="_blank">itch.io</a></p>
             </div>
             <div class="intro">
                 <h2>Screenshots</h2>
@@ -64,8 +64,8 @@
             </div>
             <div class="intro">
                 <h2>Links</h2>
-                <a class="contact-me" href="https://github.com/what-the-hek/spider-game">GitHub</a>
-                <a class="contact-me" href="https://whatthehek.itch.io/koorta">Play Koorta</a>
+                <a class="contact-me" href="https://github.com/what-the-hek/spider-game" target="_blank">GitHub</a>
+                <a class="contact-me" href="https://whatthehek.itch.io/koorta" target="_blank">Play Koorta</a>
             </div>  
         <section>
     </main>
