remove old resume link, minor css fixes

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                 <img id="profile-img" src="images/bio-pic3.png" alt="Profile picture of Jessica Hek">
                 <div id="mini-nav">
                     <p>
-                    I'm a full stack developer with a background in business process improvement, policy development and communications.
+                    I'm a full stack developer with a background in business process improvement, policy development, and communications.
                     <br/><br/>
-                    I completed the She Codes Plus program in early 2023 and now return as a mentor. 
+                    I make games in my spare time and mentor women learning to code through <a class="fix-links" href="https://shecodes.com.au/" target="_blank">She Codes Australia</a>. 
                     </p>
-                    <a class="contact-me" href="images/Jessica-Hek.pdf" download target="_blank">Download resume</a>
+                    <!-- <a class="contact-me" href="images/Jessica-Hek.pdf" download target="_blank">Download resume</a> -->
                     <a class="contact-me" href="contact.html">Contact me</a>
                 </div>
             </div>
