--- a/sound-reflections.html
+++ b/sound-reflections.html
@@ -30,7 +30,7 @@
             </div>
             <div>
                 <h2>Project brief</h2>
-                <p>As a team of six, create a game using the theme "balance". This game was started during a 2 day game jam run by <a class=".p-link" href="https://levelherup.com.au/">Level Her Up</a>, and was completed in the week following.</p>
+                <p>As a team of six, create a game using the theme "balance". This game was started during a 2 day game jam run by <a class="fix-links" href="https://levelherup.com.au/">Level Her Up</a>, and was completed in the week following.</p>
                 <p>I did the programming for the game using Unity and C#, and created UI designs and animations.</p>
                 <p>Some of the features for the game include:</p>
                 <ul>
@@ -40,7 +40,7 @@
                     <li>a randomly generated list of tasks for each day/round in the game</li>
                     <li>a different song at the end of the game for each orb category (life domain) based on the players score</li>
                 </ul>
-                <p>Sound Reflections is now available to play on <a id=".p-link" href="https://whatthehek.itch.io/sound-reflections" target="_blank">itch.io!</a></p>
+                <p>Sound Reflections is now available to play on <a class="fix-links" href="https://whatthehek.itch.io/sound-reflections" target="_blank">itch.io!</a></p>
             </div>
             <div class="intro">
                 <h2>Screenshots</h2>
