--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jessica Hek</title>
+    <title>Jessica</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -26,16 +26,15 @@
     <main>
         <!-- ABOUT ME -->
         <section id="about-me">
-            <h1>Jessica Hek</h1>
+            <h1>Jessica</h1>
             <div id="profile">
-                <img id="profile-img" src="images/bio-pic3.png" alt="Profile picture of Jessica Hek">
+                <img id="profile-img" src="images/bio-pic3.png" alt="Profile picture of Jessica">
                 <div id="mini-nav">
                     <p>
                     I'm a full stack developer with a background in business process improvement, policy development, and communications.
                     <br/><br/>
                     I make games in my spare time and mentor women learning to code through <a class="fix-links" href="https://shecodes.com.au/" target="_blank">She Codes Australia</a>. 
                     </p>
-                    <!-- <a class="contact-me" href="images/Jessica-Hek.pdf" download target="_blank">Download resume</a> -->
                     <a class="contact-me" href="contact.html">Contact me</a>
                 </div>
             </div>
