--- a/showcase/showcase.html
+++ b/showcase/showcase.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jessica Hek</title>
+    <title>Jessica</title>
     <link rel="stylesheet" href="showcase.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
         <section class="bio-section">
             <div>
                 <img id="bio-pic" src="images/bio-pic3.png">
-                <h1>Jess Hek</h1>
+                <h1>Jess</h1>
                 <p class="tag">Full stack developer</p>
                 <!-- <p>I've been working in government for almost 16 years with a background in business process improvement.</p> -->
                 <!-- <p>I enjoy working with front and back end code, and my favourite She Codes project was the crowdfunding website.</p> -->
