--- a/showcase/healium.html
+++ b/showcase/healium.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jessica Hek</title>
+    <title>Jessica</title>
     <link rel="stylesheet" href="showcase.css">
 </head>
 <body>
